[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scenes/Objects/BadGuys/Stalactite.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Creatures/Stalactite/falling.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Creatures/Stalactite/broken.png" type="Texture" id=3]
[ext_resource path="res://Audio/SoundEffects/Enemy/cracking.wav" type="AudioStream" id=4]
[ext_resource path="res://Audio/SoundEffects/Enemy/icecrash.ogg" type="AudioStream" id=5]
[ext_resource path="res://Sprites/Creatures/Stalactite/stalactiteshard.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "broken",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 14, 22 )

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("Control/AnimatedSprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control/AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "broken" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Control/AnimatedSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Control/AnimatedSprite:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.7, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Control/AnimatedSprite:offset")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -4 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("CPUParticles2D:emitting")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=5]
resource_name = "default"
tracks/0/type = "value"
tracks/0/path = NodePath("Control/AnimatedSprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control/AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "default" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Control/AnimatedSprite:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CPUParticles2D:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=6]
length = 0.08
loop = true
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("Control/AnimatedSprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.02, 0.04, 0.06 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 2, 0 ), Vector2( 0, 0 ), Vector2( -2, 0 ) ]
}

[sub_resource type="Curve" id=8]
min_value = -360.0
max_value = 720.0
_data = [ Vector2( 0, 720 ), 0.0, -1630.36, 0, 0, Vector2( 1, -360 ), -467.115, 0.0, 0, 0 ]

[sub_resource type="Curve" id=9]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -2.57309, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=10]
offsets = PoolRealArray( 0, 0.739535, 1 )
colors = PoolColorArray( 1, 1, 1, 0.635294, 1, 1, 1, 0.737255, 1, 1, 1, 0 )

[node name="Stalactite" type="KinematicBody2D"]
position = Vector2( 1, 0 )
collision_layer = 0
collision_mask = 4
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 8 )
shape = SubResource( 1 )

[node name="Control" type="Control" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Control"]
position = Vector2( 0, 4 )
z_index = -1
frames = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( -0.714695, -1.19116 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 7 )
shape = SubResource( 3 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( 0, 8 )
rect = Rect2( -24, -32, 48, 64 )

[node name="SFX" type="Node" parent="."]

[node name="Cracking" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 4 )

[node name="Icecrash" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "default"
anims/broken = SubResource( 4 )
anims/default = SubResource( 5 )
anims/shake = SubResource( 6 )

[node name="trigger_ray" type="RayCast2D" parent="."]
position = Vector2( 0, 22 )
enabled = true
cast_to = Vector2( 0, 1000 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
rotation = -1.5708
emitting = false
amount = 6
lifetime = 0.75
one_shot = true
explosiveness = 1.0
local_coords = false
texture = ExtResource( 6 )
gravity = Vector2( 0, 550 )
initial_velocity = 250.0
damping = 20.0
angle = 360.0
angle_random = 1.0
angle_curve = SubResource( 8 )
scale_amount = 0.8
scale_amount_curve = SubResource( 9 )
color_ramp = SubResource( 10 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="screen_exited" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
